# plattform-zur-datensammlung-und-suchmaschinenerzeugung

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  docker-compose.yml  pyproject.toml  qenable.Dockerfile  scrapyd.Dockerfile
doc/: sprint1.md  sprint2.md  sprint3.md
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Constants.js  index.js
src/qenable/: __init__.py  config.py  crawler.py  views.py
urlcrawler/: scrapy.cfg  scrapyd.conf  setup.py
urlcrawler/urlcrawler/: items.py  middlewares.py  pipelines.py  settings.py
